packages/svelte/tests/validator/samples/no-runes-mode/_config.js
import { test } from '../../test';

export default test({
	compileOptions: {
		runes: false
	}
});
