packages/svelte/tests/compiler-errors/samples/attribute-unique/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'duplicate_attribute',
		message: 'Attributes need to be unique',
		position: [17, 17]
	}
});
